adding the project ID to the autodeploy script only with gcloud deploy

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,12 @@
 steps:
-
+# Build the Docker image.
+- name: gcr.io/cloud-builders/docker
+  args: ['build', '-t', 'gcr.io/teamseven/app', '.']
+# Push it to GCR.
+- name: gcr.io/cloud-builders/docker
+  args: ['push', 'gcr.io/teamseven/app']
+# Deploy your Flex app from the image in GCR.
 - name: gcr.io/cloud-builders/gcloud
   args: ['app', 'deploy', 'app.yaml', '--image-url=gcr.io/teamseven/app']
+# Note that this build pushes this image.
+images: ['gcr.io/teamseven/app']
