adding from console

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,4 @@
 steps:
-# Build the Docker image.
-- name: gcr.io/cloud-builders/gcloud
-  args: ['app', 'deploy', 'app.yaml', '--image-url=gcr.io/teamseven/app']
-# Note that this build pushes this image.
-images: ['gcr.io/teamseven/app']
+- name: "gcr.io/cloud-builders/gcloud"
+  args: ["app", "deploy"]
+timeout: "1600s"
